--- a/box.css
+++ b/box.css
@@ -19,11 +19,20 @@
     background-color: var(--C);
   }
 
+
+  div {
+    flex: 1 0 100%;
+    padding: 1.5rem;
+    transition: flex-basis 500ms linear;
+    margin-bottom: 1.5rem;
+  }
+  
   h1,h3{
     margin-bottom: 0.5rem;
     color: var(--A);
     font-weight: 700;
     line-height: 1.1;
+
   }
 
   h1 {
@@ -32,13 +41,36 @@
   
   h3 {
     font-size: 3rem;
+    position: relative;
+    margin: -4rem 0 1.5rem 0;
+    padding: 0.5rem 1rem;
+    background-color: var(--C);
+    color: var(--B);
+    border: 2px solid var(--A);
+    border-radius: 8px;
+    transition: all 0.5s ease-in-out;
+  }
+
+  main{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
   }
 
   div {
-    flex: 1 0 100%;
+    border-style: solid;
+    flex: 3 1 350px;
     padding: 1.5rem;
     transition: flex-basis 500ms linear;
+    margin: 20px 10px;
     margin-bottom: 1.5rem;
+    border-radius: 8px;
+    transition: all 0.5s ease-in-out;
+  }
+
+  div:hover{
+    box-shadow: inset 0px 0px 8px var(--A), 0 0 15px var(--D);
   }
 
   footer {
